# reversible-data-hiding

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  benchmarks_results.json  extractor_default_params.json  run_benchmarks.bat
benchmarks/: CMakeLists.txt  bench_data_extractor.cpp  bench_embed.cpp  bench_encrypt.cpp  bench_extractor.cpp  bench_load.cpp  bench_main.cpp  bench_modes.cpp  params_generator.h  reference_images.h
include/: bmp_image.h  image_matrix.h  img_matrix.h  types.h
src/: CMakeLists.txt  bmp_image.cpp  bmp_image.h  encryptor.cpp  encryptor.h  image_matrix-impl.h  image_matrix.cpp  image_matrix.h  img_matrix.cpp  logging.h  main.cpp  options.cpp  options.h  types.h  utils.h
src/embedder/: compressor.h  consts.h  embedder.cpp  embedder.h  encoded_block.h  encoder.h  huffman-impl.h  huffman.cpp  huffman.h  rlc-impl.h  rlc.cpp  rlc.h
src/encryptor/: encryptor.cpp  encryptor.h
src/extractor/: extractor.cpp  extractor.h
src/image/: bmp_image.cpp  bmp_image.h  image_matrix-impl.h  image_matrix.cpp  image_matrix.h  image_quality.cpp  image_quality.h
tests/: CMakeLists.txt  test_embedder.cpp  test_encryptor.cpp  test_huffman.cpp  test_image_matrix.cpp  test_rlc_compressor.cpp  test_rlc_encoder.cpp  test_utils.cpp
utils/src/: build_huffman_freq.py  perform_experiments.py  visualise_data.ipynb
